// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> CriticalRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-critical btn-primary"
    type="button"
  >
    <span
      class="button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--variant-critical btn-secondary"
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--variant-critical btn-tertiary"
    type="button"
  >
    <span
      class="button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> Default story renders snapshot 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--variant-default"
  type="button"
>
  <span
    class="button__text"
  >
    Button
  </span>
</button>
`;

exports[`<Button /> DefaultRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-default btn-primary"
    type="button"
  >
    <span
      class="button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--variant-default btn-secondary"
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--variant-default btn-tertiary"
    type="button"
  >
    <span
      class="button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> Disabled story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <span
    class="btn-primary button__disabled"
  >
    <button
      class="button button--layout-none button--disabled button--primary button--lg button--variant-default"
      disabled=""
      type="button"
    >
      <span
        class="button__text"
      >
        Primary
      </span>
    </button>
  </span>
  <span
    class="btn-secondary button__disabled"
  >
    <button
      class="button button--layout-none button--disabled button--secondary button--lg button--variant-default"
      disabled=""
      type="button"
    >
      <span
        class="button__text"
      >
        Secondary
      </span>
    </button>
  </span>
  <span
    class="btn-tertiary button__disabled"
  >
    <button
      class="button button--layout-none button--disabled button--tertiary button--lg button--variant-default"
      disabled=""
      type="button"
    >
      <span
        class="button__text"
      >
        Tertiary
      </span>
    </button>
  </span>
</div>
`;

exports[`<Button /> FullWidths story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--full-width button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Large
    </span>
  </button>
  <button
    class="button button--layout-none button--full-width button--primary button--md button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Medium
    </span>
  </button>
  <button
    class="button button--layout-none button--full-width button--primary button--sm button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`<Button /> IconLayouts story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-left button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
        />
      </svg>
      Left
    </span>
  </button>
  <button
    class="button button--layout-right button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Right
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
        />
      </svg>
    </span>
  </button>
  <button
    aria-label="Label must be applied with icon-only layout"
    class="button button--layout-icon-only button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Button /> InverseDisabledRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <span
      class="btn-primary button__disabled"
    >
      <button
        class="button button--layout-none button--disabled button--primary button--lg button--variant-inverse"
        disabled=""
        type="button"
      >
        <span
          class="button__text"
        >
          Primary
        </span>
      </button>
    </span>
    <span
      class="btn-secondary button__disabled"
    >
      <button
        class="button button--layout-none button--disabled button--secondary button--lg button--variant-inverse"
        disabled=""
        type="button"
      >
        <span
          class="button__text"
        >
          Secondary
        </span>
      </button>
    </span>
    <span
      class="btn-tertiary button__disabled"
    >
      <button
        class="button button--layout-none button--disabled button--tertiary button--lg button--variant-inverse"
        disabled=""
        type="button"
      >
        <span
          class="button__text"
        >
          Tertiary
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`<Button /> InverseRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-inverse btn-primary"
      type="button"
    >
      <span
        class="button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-inverse btn-secondary"
      type="button"
    >
      <span
        class="button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--variant-inverse btn-tertiary"
      type="button"
    >
      <span
        class="button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> JustDisabledProp story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-default btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--variant-default btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> LoadingStates story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--loading button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text button--is-loading"
    >
      Large
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="16"
        stroke="transparent"
        viewBox="-22 -22 46 46"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="4"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="4"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
  <button
    class="button button--layout-none button--loading button--primary button--md button--variant-default"
    type="button"
  >
    <span
      class="button__text button--is-loading"
    >
      Medium
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="16"
        stroke="transparent"
        viewBox="-22 -22 46 46"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="4"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="4"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
  <button
    class="button button--layout-none button--loading button--primary button--sm button--variant-default"
    type="button"
  >
    <span
      class="button__text button--is-loading"
    >
      Small
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="16"
        stroke="transparent"
        viewBox="-22 -22 46 46"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="4"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="4"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`<Button /> NeutralRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-neutral btn-primary"
    type="button"
  >
    <span
      class="button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--variant-neutral btn-secondary"
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--variant-neutral btn-tertiary"
    type="button"
  >
    <span
      class="button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> Sizes story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Large
    </span>
  </button>
  <button
    class="button button--layout-none button--primary button--md button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Medium
    </span>
  </button>
  <button
    class="button button--layout-none button--primary button--sm button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`<Button /> TertiaryStandalone story renders snapshot 1`] = `
<button
  class="button button--context-standalone button--layout-none button--tertiary button--lg button--variant-default"
  type="button"
>
  <span
    class="button__text"
  >
    Button
  </span>
</button>
`;

exports[`<Button /> UsingExtendedLink story renders snapshot 1`] = `
<div>
  Lorem ipsum dolor sit amet, . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
   
  <button
    class="button button--layout-none button--primary button--lg button--variant-default"
    to="test"
    type="button"
  >
    <span
      class="button__text"
    >
      consectetur adipiscing elit
    </span>
  </button>
</div>
`;

exports[`<Button /> passes class names down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--variant-default exampleClassName"
  data-testid="example-class-name"
  type="button"
>
  <span
    class="button__text"
  >
    Click
  </span>
</button>
`;

exports[`<Button /> passes test ids down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--variant-default"
  data-testid="example-test-id"
  type="button"
>
  <span
    class="button__text"
  >
    Click
  </span>
</button>
`;
